brokers/external-to-internal-reencrypt/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: extern-amqp-rte
  namespace: amq-ss-broker
  haproxy.router.openshift.io/timeout: 300s
spec:
  port:
    targetPort: amqp-acceptor-0
  tls:
    termination: reencrypt
    destinationCACertificate: | 
      -----BEGIN CERTIFICATE-----
      MIIDejCCAmKgAwIBAgIJAJxBM/fzkdHrMA0GCSqGSIb3DQEBCwUAMGsxCzAJBgNV
[...]
      rwXv/3g1n+kKi0AGpiZIC4e9v21RA5sT2Gu6GRu0
      -----END CERTIFICATE-----
  to:
    kind: Service
    name: broker-amqp-acceptor-0-svc
